Hi,
libgcrypt-1.8.0 is failing on solaris 10 box , could you please provide me the solution. Installing libraries by below order if it is wrong please provide correct order.
npth libgpg-error libgcrypt libksba libassuan
gnupg2.1.21
"../src/cipher-proto.h", line 27: warning: useless declaration
"md.c", line 998: identifier redeclared: _gcry_md_extract
current : function(pointer to struct gcry_md_handle {pointer to struct gcry_md_context {..} ctx, int bufpos, int bufsize, array[1] of unsigned char buf}, int, pointer to void, unsigned int) returning enum {GPG_ERR_CODE_DIM(65536), GPG_ERR_EXFULL(32908), GPG_ERR_EXDEV(32907), GPG_ERR_EWOULDBLOCK(32906), GPG_ERR_EUSERS(32905), GPG_ERR_EUNATCH(32904), GPG_ERR_EUCLEAN(32903), GPG_ERR_ETXTBSY(32902), GPG_ERR_ETOOMANYREFS(32901), GPG_ERR_ETIMEDOUT(32900), GPG_ERR_ETIME(32899), GPG_ERR_ESTRPIPE(32898), GPG_ERR_ESTALE(32897), GPG_ERR_ESRMNT(32896), GPG_ERR_ESRCH(32895), GPG_ERR_ESPIPE(32894), GPG_ERR_ESOCKTNOSUPPORT(32893), GPG_ERR_ESHUTDOWN(32892), GPG_ERR_ERPCMISMATCH(32891), GPG_ERR_EROFS(32890), GPG_ERR_ERESTART(32889), GPG_ERR_EREMOTEIO(32888), GPG_ERR_EREMOTE(32887), GPG_ERR_EREMCHG(32886), GPG_ERR_ERANGE(32885), GPG_ERR_EPROTOTYPE(32884), GPG_ERR_EPROTONOSUPPORT(32883), GPG_ERR_EPROTO(32882), GPG_ERR_EPROGUNAVAIL(32881), GPG_ERR_EPROGMISMATCH(32880), GPG_ERR_EPROCUNAVAIL(32879), GPG_ERR_EPROCLIM(32878), GPG_ERR_EPIPE(32877), GPG_ERR_EPFNOSUPPORT(32876), GPG_ERR_EPERM(32875), GPG_ERR_EOVERFLOW(32874), GPG_ERR_EOPNOTSUPP(32873), GPG_ERR_ENXIO(32872), GPG_ERR_ENOTUNIQ(32871), GPG_ERR_ENOTTY(32870), GPG_ERR_ENOTSUP(32869), GPG_ERR_ENOTSOCK(32868), GPG_ERR_ENOTNAM(32867), GPG_ERR_ENOTEMPTY(32866), GPG_ERR_ENOTDIR(32865), GPG_ERR_ENOTCONN(32864), GPG_ERR_ENOTBLK(32863), GPG_ERR_ENOSYS(32862), GPG_ERR_ENOSTR(32861), GPG_ERR_ENOSR(32860), GPG_ERR_ENOSPC(32859), GPG_ERR_ENOPROTOOPT(32858), GPG_ERR_ENOPKG(32857), GPG_ERR_ENONET(32856), GPG_ERR_ENOMSG(32855), GPG_ERR_ENOMEM(32854), GPG_ERR_ENOMEDIUM(32853), GPG_ERR_ENOLINK(32852), GPG_ERR_ENOLCK(32851), GPG_ERR_ENOEXEC(32850), GPG_ERR_ENOENT(32849), GPG_ERR_ENODEV(32848), GPG_ERR_ENODATA(32847), GPG_ERR_ENOCSI(32846), GPG_ERR_ENOBUFS(32845), GPG_ERR_ENOANO(32844), GPG_ERR_ENFILE(32843), GPG_ERR_ENETUNREACH(32842), GPG_ERR_ENETRESET(32841), GPG_ERR_ENETDOWN(32840), GPG_ERR_ENEEDAUTH(32839), GPG_ERR_ENAVAIL(32838), GPG_ERR_ENAMETOOLONG(32837), GPG_ERR_EMULTIHOP(32836), GPG_ERR_EMSGSIZE(32835), GPG_ERR_EMLINK(32834), GPG_ERR_EMFILE(32833), GPG_ERR_EMEDIUMTYPE(32832), GPG_ERR_ELOOP(32831), GPG_ERR_ELNRNG(32830), GPG_ERR_ELIBSCN(32829), GPG_ERR_ELIBMAX(32828), GPG_ERR_ELIBEXEC(32827), GPG_ERR_ELIBBAD(32826), GPG_ERR_ELIBACC(32825), GPG_ERR_EL3RST(32824), GPG_ERR_EL3HLT(32823), GPG_ERR_EL2NSYNC(32822), GPG_ERR_EL2HLT(32821), GPG_ERR_EISNAM(32820), GPG_ERR_EISDIR(32819), GPG_ERR_EISCONN(32818), GPG_ERR_EIO(32817), GPG_ERR_EINVAL(32816), GPG_ERR_EINTR(32815), GPG_ERR_EINPROGRESS(32814), GPG_ERR_EILSEQ(32813), GPG_ERR_EIEIO(32812), GPG_ERR_EIDRM(32811), GPG_ERR_EHOSTUNREACH(32810), GPG_ERR_EHOSTDOWN(32809), GPG_ERR_EGREGIOUS(32808), GPG_ERR_EGRATUITOUS(32807), GPG_ERR_EFTYPE(32806), GPG_ERR_EFBIG(32805), GPG_ERR_EFAULT(32804), GPG_ERR_EEXIST(32803), GPG_ERR_EDQUOT(32802), GPG_ERR_EDOTDOT(32801), GPG_ERR_EDOM(32800), GPG_ERR_EDIED(32799), GPG_ERR_EDESTADDRREQ(32798), GPG_ERR_EDEADLOCK(32797), GPG_ERR_EDEADLK(32796), GPG_ERR_ED(32795), GPG_ERR_ECONNRESET(32794), GPG_ERR_ECONNREFUSED(32793), GPG_ERR_ECONNABORTED(32792), GPG_ERR_ECOMM(32791), GPG_ERR_ECHRNG(32790), GPG_ERR_ECHILD(32789), GPG_ERR_ECANCELED(32788), GPG_ERR_EBUSY(32787), GPG_ERR_EBFONT(32786), GPG_ERR_EBADSLT(32785), GPG_ERR_EBADRQC(32784), GPG_ERR_EBADRPC(32783), GPG_ERR_EBADR(32782), GPG_ERR_EBADMSG(32781), GPG_ERR_EBADFD(32780), GPG_ERR_EBADF(32779), GPG_ERR_EBADE(32778), GPG_ERR_EBACKGROUND(32777), GPG_ERR_EAUTH(32776), GPG_ERR_EALREADY(32775), GPG_ERR_EAGAIN(32774), GPG_ERR_EAFNOSUPPORT(32773), GPG_ERR_EADV(32772), GPG_ERR_EADDRNOTAVAIL(32771), GPG_ERR_EADDRINUSE(32770), GPG_ERR_EACCES(32769), GPG_ERR_E2BIG(32768), GPG_ERR_EOF(16383), GPG_ERR_UNKNOWN_ERRNO(16382), GPG_ERR_MISSING_ERRNO(16381), GPG_ERR_USER_16(1039), GPG_ERR_USER_15(1038), GPG_ERR_USER_14(1037), GPG_ERR_USER_13(1036), GPG_ERR_USER_12(1035), GPG_ERR_USER_11(1034), GPG_ERR_USER_10(1033), GPG_ERR_USER_9(1032), GPG_ERR_USER_8(1031), GPG_ERR_USER_7(1030), GPG_ERR_USER_6(1029), GPG_ERR_USER_5(1028), GPG_ERR_USER_4(1027), GPG_ERR_USER_3(1026), GPG_ERR_USER_2(1025), GPG_ERR_USER_1(1024), GPG_ERR_LDAP_PROX_AUTH_DENIED(891), GPG_ERR_LDAP_ASSERTION_FAILED(890), GPG_ERR_LDAP_CANNOT_CANCEL(889), GPG_ERR_LDAP_TOO_LATE(888), GPG_ERR_LDAP_NO_SUCH_OPERATION(887), GPG_ERR_LDAP_CANCELLED(886), GPG_ERR_LDAP_CUP_RELOAD(885), GPG_ERR_LDAP_CUP_UNSUP_SCHEME(884), GPG_ERR_LDAP_CUP_INV_DATA(883), GPG_ERR_LDAP_CUP_SEC_VIOLATION(882), GPG_ERR_LDAP_CUP_RESOURCE_LIMIT(881), GPG_ERR_LDAP_OTHER(848), GPG_ERR_LDAP_VLV(844), GPG_ERR_LDAP_AFFECTS_MULT_DSAS(839), GPG_ERR_LDAP_RESULTS_TOO_LARGE(838), GPG_ERR_LDAP_NO_OBJ_CLASS_MODS(837), GPG_ERR_LDAP_ALREADY_EXISTS(836), GPG_ERR_LDAP_NOT_ALLOW_ON_RDN(835), GPG_ERR_LDAP_NOT_ALLOW_NONLEAF(834), GPG_ERR_LDAP_OBJ_CLS_VIOLATION(833), GPG_ERR_LDAP_NAMING_VIOLATION(832), GPG_ERR_LDAP_LOOP_DETECT(822), GPG_ERR_LDAP_UNWILL_TO_PERFORM(821), GPG_ERR_LDAP_UNAVAILABLE(820), GPG_ERR_LDAP_BUSY(819), GPG_ERR_LDAP_INSUFFICIENT_ACC(818), GPG_ERR_LDAP_INV_CREDENTIALS(817), GPG_ERR_LDAP_BAD_AUTH(816), GPG_ERR_LDAP_X_PROXY_AUTH_FAIL(815), GPG_ERR_LDAP_ALIAS_DEREF(804), GPG_ERR_LDAP_IS_LEAF(803), GPG_ERR_LDAP_INV_DN_SYNTAX(802), GPG_ERR_LDAP_ALIAS_PROBLEM(801), GPG_ERR_LDAP_NO_SUCH_OBJ(800), GPG_ERR_LDAP_INV_SYNTAX(789), GPG_ERR_LDAP_TYPE_VALUE_EXISTS(788), GPG_ERR_LDAP_CONST_VIOLATION(787), GPG_ERR_LDAP_BAD_MATCHING(786), GPG_ERR_LDAP_UNDEFINED_TYPE(785), GPG_ERR_LDAP_NO_SUCH_ATTRIBUTE(784), GPG_ERR_LDAP_SASL_BIND_INPROG(782), GPG_ERR_LDAP_CONFIDENT_RQRD(781), GPG_ERR_LDAP_UNAVAIL_CRIT_EXTN(780), GPG_ERR_LDAP_ADMINLIMIT(779), GPG_ERR_LDAP_REFERRAL(778), GPG_ERR_LDAP_PARTIAL_RESULTS(777), GPG_ERR_LDAP_STRONG_AUTH_RQRD(776), GPG_ERR_LDAP_UNSUPPORTED_AUTH(775), GPG_ERR_LDAP_COMPARE_TRUE(774), GPG_ERR_LDAP_COMPARE_FALSE(773), GPG_ERR_LDAP_SIZELIMIT(772), GPG_ERR_LDAP_TIMELIMIT(771), GPG_ERR_LDAP_PROTOCOL(770), GPG_ERR_LDAP_OPERATIONS(769), GPG_ERR_LDAP_SUCCESS(768), GPG_ERR_LDAP_SERVER_DOWN(767), GPG_ERR_LDAP_LOCAL(766), GPG_ERR_LDAP_ENCODING(765), GPG_ERR_LDAP_DECODING(764), GPG_ERR_LDAP_TIMEOUT(763), GPG_ERR_LDAP_AUTH_UNKNOWN(762), GPG_ERR_LDAP_FILTER(761), GPG_ERR_LDAP_USER_CANCELLED(760), GPG_ERR_LDAP_PARAM(759), GPG_ERR_LDAP_NO_MEMORY(758), GPG_ERR_LDAP_CONNECT(757), GPG_ERR_LDAP_NOT_SUPPORTED(756}
previous: function(pointer to struct gcry_md_handle {pointer to struct gcry_md_context {..} ctx, int bufpos, int bufsize, array[1] of unsigned char buf}, int, pointer to void, unsigned int) returning unsigned int : "../src/gcrypt-int.h", line 123cc: acomp failed for md.c
gmake[2]: * [md.lo] Error 1
gmake[2]: Leaving directory `/src/libgcrypt-1.8.0/cipher'
gmake[1]: * [all-recursive] Error 1
gmake[1]: Leaving directory `/src/libgcrypt-1.8.0'
gmake: *** [all] Error 2
if use make
"../src/cipher-proto.h", line 27: warning: useless declaration
"md.c", line 998: identifier redeclared: _gcry_md_extract
current : function(pointer to struct gcry_md_handle {pointer to struct gcry_md_context {..} ctx, int bufpos, int bufsize, array[1] of unsigned char buf}, int, pointer to void, unsigned int) returning enum {GPG_ERR_CODE_DIM(65536), GPG_ERR_EXFULL(32908), GPG_ERR_EXDEV(32907), GPG_ERR_EWOULDBLOCK(32906), GPG_ERR_EUSERS(32905), GPG_ERR_EUNATCH(32904), GPG_ERR_EUCLEAN(32903), GPG_ERR_ETXTBSY(32902), GPG_ERR_ETOOMANYREFS(32901), GPG_ERR_ETIMEDOUT(32900), GPG_ERR_ETIME(32899), GPG_ERR_ESTRPIPE(32898), GPG_ERR_ESTALE(32897), GPG_ERR_ESRMNT(32896), GPG_ERR_ESRCH(32895), GPG_ERR_ESPIPE(32894), GPG_ERR_ESOCKTNOSUPPORT(32893), GPG_ERR_ESHUTDOWN(32892), GPG_ERR_ERPCMISMATCH(32891), GPG_ERR_EROFS(32890), GPG_ERR_ERESTART(32889), GPG_ERR_EREMOTEIO(32888), GPG_ERR_EREMOTE(32887), GPG_ERR_EREMCHG(32886), GPG_ERR_ERANGE(32885), GPG_ERR_EPROTOTYPE(32884), GPG_ERR_EPROTONOSUPPORT(32883), GPG_ERR_EPROTO(32882), GPG_ERR_EPROGUNAVAIL(32881), GPG_ERR_EPROGMISMATCH(32880), GPG_ERR_EPROCUNAVAIL(32879), GPG_ERR_EPROCLIM(32878), GPG_ERR_EPIPE(32877), GPG_ERR_EPFNOSUPPORT(32876), GPG_ERR_EPERM(32875), GPG_ERR_EOVERFLOW(32874), GPG_ERR_EOPNOTSUPP(32873), GPG_ERR_ENXIO(32872), GPG_ERR_ENOTUNIQ(32871), GPG_ERR_ENOTTY(32870), GPG_ERR_ENOTSUP(32869), GPG_ERR_ENOTSOCK(32868), GPG_ERR_ENOTNAM(32867), GPG_ERR_ENOTEMPTY(32866), GPG_ERR_ENOTDIR(32865), GPG_ERR_ENOTCONN(32864), GPG_ERR_ENOTBLK(32863), GPG_ERR_ENOSYS(32862), GPG_ERR_ENOSTR(32861), GPG_ERR_ENOSR(32860), GPG_ERR_ENOSPC(32859), GPG_ERR_ENOPROTOOPT(32858), GPG_ERR_ENOPKG(32857), GPG_ERR_ENONET(32856), GPG_ERR_ENOMSG(32855), GPG_ERR_ENOMEM(32854), GPG_ERR_ENOMEDIUM(32853), GPG_ERR_ENOLINK(32852), GPG_ERR_ENOLCK(32851), GPG_ERR_ENOEXEC(32850), GPG_ERR_ENOENT(32849), GPG_ERR_ENODEV(32848), GPG_ERR_ENODATA(32847), GPG_ERR_ENOCSI(32846), GPG_ERR_ENOBUFS(32845), GPG_ERR_ENOANO(32844), GPG_ERR_ENFILE(32843), GPG_ERR_ENETUNREACH(32842), GPG_ERR_ENETRESET(32841), GPG_ERR_ENETDOWN(32840), GPG_ERR_ENEEDAUTH(32839), GPG_ERR_ENAVAIL(32838), GPG_ERR_ENAMETOOLONG(32837), GPG_ERR_EMULTIHOP(32836), GPG_ERR_EMSGSIZE(32835), GPG_ERR_EMLINK(32834), GPG_ERR_EMFILE(32833), GPG_ERR_EMEDIUMTYPE(32832), GPG_ERR_ELOOP(32831), GPG_ERR_ELNRNG(32830), GPG_ERR_ELIBSCN(32829), GPG_ERR_ELIBMAX(32828), GPG_ERR_ELIBEXEC(32827), GPG_ERR_ELIBBAD(32826), GPG_ERR_ELIBACC(32825), GPG_ERR_EL3RST(32824), GPG_ERR_EL3HLT(32823), GPG_ERR_EL2NSYNC(32822), GPG_ERR_EL2HLT(32821), GPG_ERR_EISNAM(32820), GPG_ERR_EISDIR(32819), GPG_ERR_EISCONN(32818), GPG_ERR_EIO(32817), GPG_ERR_EINVAL(32816), GPG_ERR_EINTR(32815), GPG_ERR_EINPROGRESS(32814), GPG_ERR_EILSEQ(32813), GPG_ERR_EIEIO(32812), GPG_ERR_EIDRM(32811), GPG_ERR_EHOSTUNREACH(32810), GPG_ERR_EHOSTDOWN(32809), GPG_ERR_EGREGIOUS(32808), GPG_ERR_EGRATUITOUS(32807), GPG_ERR_EFTYPE(32806), GPG_ERR_EFBIG(32805), GPG_ERR_EFAULT(32804), GPG_ERR_EEXIST(32803), GPG_ERR_EDQUOT(32802), GPG_ERR_EDOTDOT(32801), GPG_ERR_EDOM(32800), GPG_ERR_EDIED(32799), GPG_ERR_EDESTADDRREQ(32798), GPG_ERR_EDEADLOCK(32797), GPG_ERR_EDEADLK(32796), GPG_ERR_ED(32795), GPG_ERR_ECONNRESET(32794), GPG_ERR_ECONNREFUSED(32793), GPG_ERR_ECONNABORTED(32792), GPG_ERR_ECOMM(32791), GPG_ERR_ECHRNG(32790), GPG_ERR_ECHILD(32789), GPG_ERR_ECANCELED(32788), GPG_ERR_EBUSY(32787), GPG_ERR_EBFONT(32786), GPG_ERR_EBADSLT(32785), GPG_ERR_EBADRQC(32784), GPG_ERR_EBADRPC(32783), GPG_ERR_EBADR(32782), GPG_ERR_EBADMSG(32781), GPG_ERR_EBADFD(32780), GPG_ERR_EBADF(32779), GPG_ERR_EBADE(32778), GPG_ERR_EBACKGROUND(32777), GPG_ERR_EAUTH(32776), GPG_ERR_EALREADY(32775), GPG_ERR_EAGAIN(32774), GPG_ERR_EAFNOSUPPORT(32773), GPG_ERR_EADV(32772), GPG_ERR_EADDRNOTAVAIL(32771), GPG_ERR_EADDRINUSE(32770), GPG_ERR_EACCES(32769), GPG_ERR_E2BIG(32768), GPG_ERR_EOF(16383), GPG_ERR_UNKNOWN_ERRNO(16382), GPG_ERR_MISSING_ERRNO(16381), GPG_ERR_USER_16(1039), GPG_ERR_USER_15(1038), GPG_ERR_USER_14(1037), GPG_ERR_USER_13(1036), GPG_ERR_USER_12(1035), GPG_ERR_USER_11(1034), GPG_ERR_USER_10(1033), GPG_ERR_USER_9(1032), GPG_ERR_USER_8(1031), GPG_ERR_USER_7(1030), GPG_ERR_USER_6(1029), GPG_ERR_USER_5(1028), GPG_ERR_USER_4(1027), GPG_ERR_USER_3(1026), GPG_ERR_USER_2(1025), GPG_ERR_USER_1(1024), GPG_ERR_LDAP_PROX_AUTH_DENIED(891), GPG_ERR_LDAP_ASSERTION_FAILED(890), GPG_ERR_LDAP_CANNOT_CANCEL(889), GPG_ERR_LDAP_TOO_LATE(888), GPG_ERR_LDAP_NO_SUCH_OPERATION(887), GPG_ERR_LDAP_CANCELLED(886), GPG_ERR_LDAP_CUP_RELOAD(885), GPG_ERR_LDAP_CUP_UNSUP_SCHEME(884), GPG_ERR_LDAP_CUP_INV_DATA(883), GPG_ERR_LDAP_CUP_SEC_VIOLATION(882), GPG_ERR_LDAP_CUP_RESOURCE_LIMIT(881), GPG_ERR_LDAP_OTHER(848), GPG_ERR_LDAP_VLV(844), GPG_ERR_LDAP_AFFECTS_MULT_DSAS(839), GPG_ERR_LDAP_RESULTS_TOO_LARGE(838), GPG_ERR_LDAP_NO_OBJ_CLASS_MODS(837), GPG_ERR_LDAP_ALREADY_EXISTS(836), GPG_ERR_LDAP_NOT_ALLOW_ON_RDN(835), GPG_ERR_LDAP_NOT_ALLOW_NONLEAF(834), GPG_ERR_LDAP_OBJ_CLS_VIOLATION(833), GPG_ERR_LDAP_NAMING_VIOLATION(832), GPG_ERR_LDAP_LOOP_DETECT(822), GPG_ERR_LDAP_UNWILL_TO_PERFORM(821), GPG_ERR_LDAP_UNAVAILABLE(820), GPG_ERR_LDAP_BUSY(819), GPG_ERR_LDAP_INSUFFICIENT_ACC(818), GPG_ERR_LDAP_INV_CREDENTIALS(817), GPG_ERR_LDAP_BAD_AUTH(816), GPG_ERR_LDAP_X_PROXY_AUTH_FAIL(815), GPG_ERR_LDAP_ALIAS_DEREF(804), GPG_ERR_LDAP_IS_LEAF(803), GPG_ERR_LDAP_INV_DN_SYNTAX(802), GPG_ERR_LDAP_ALIAS_PROBLEM(801), GPG_ERR_LDAP_NO_SUCH_OBJ(800), GPG_ERR_LDAP_INV_SYNTAX(789), GPG_ERR_LDAP_TYPE_VALUE_EXISTS(788), GPG_ERR_LDAP_CONST_VIOLATION(787), GPG_ERR_LDAP_BAD_MATCHING(786), GPG_ERR_LDAP_UNDEFINED_TYPE(785), GPG_ERR_LDAP_NO_SUCH_ATTRIBUTE(784), GPG_ERR_LDAP_SASL_BIND_INPROG(782), GPG_ERR_LDAP_CONFIDENT_RQRD(781), GPG_ERR_LDAP_UNAVAIL_CRIT_EXTN(780), GPG_ERR_LDAP_ADMINLIMIT(779), GPG_ERR_LDAP_REFERRAL(778), GPG_ERR_LDAP_PARTIAL_RESULTS(777), GPG_ERR_LDAP_STRONG_AUTH_RQRD(776), GPG_ERR_LDAP_UNSUPPORTED_AUTH(775), GPG_ERR_LDAP_COMPARE_TRUE(774), GPG_ERR_LDAP_COMPARE_FALSE(773), GPG_ERR_LDAP_SIZELIMIT(772), GPG_ERR_LDAP_TIMELIMIT(771), GPG_ERR_LDAP_PROTOCOL(770), GPG_ERR_LDAP_OPERATIONS(769), GPG_ERR_LDAP_SUCCESS(768), GPG_ERR_LDAP_SERVER_DOWN(767), GPG_ERR_LDAP_LOCAL(766), GPG_ERR_LDAP_ENCODING(765), GPG_ERR_LDAP_DECODING(764), GPG_ERR_LDAP_TIMEOUT(763), GPG_ERR_LDAP_AUTH_UNKNOWN(762), GPG_ERR_LDAP_FILTER(761), GPG_ERR_LDAP_USER_CANCELLED(760), GPG_ERR_LDAP_PARAM(759), GPG_ERR_LDAP_NO_MEMORY(758), GPG_ERR_LDAP_CONNECT(757), GPG_ERR_LDAP_NOT_SUPPORTED(756}
previous: function(pointer to struct gcry_md_handle {pointer to struct gcry_md_context {..} ctx, int bufpos, int bufsize, array[1] of unsigned char buf}, int, pointer to void, unsigned int) returning unsigned int : "../src/gcrypt-int.h", line 123cc: acomp failed for md.c
- Error code 1
make: Fatal error: Command failed for target `md.lo'
Current working directory /src/libgcrypt-1.8.0/cipher
- Error code 1
The following command caused the error:
fail=; \
if (target_option=k; case ${target_option-} in ?) ;; *) echo "am__make_running_with_option: internal error: invalid" "target option '${target_option-}' specified" >&2; exit 1;; esac; has_opt=no; sane_makeflags=$MAKEFLAGS; if test -n '' && test -n '1'; then sane_makeflags=$MFLAGS; else case $MAKEFLAGS in *\\[\ \ ]*) bs=\\; sane_makeflags=printf '%s\n' "$MAKEFLAGS" | sed "s/$bs$bs[$bs $bs ]*//g";; esac; fi; skip_next=no; strip_trailopt () { flg=printf '%s\n' "$flg" | sed "s/$1.*$//"; }; for flg in $sane_makeflags; do test $skip_next = yes && { skip_next=no; continue; }; case $flg in *=*|--*) continue;; -*I) strip_trailopt 'I'; skip_next=yes;; -*I?*) strip_trailopt 'I';; -*O) strip_trailopt 'O'; skip_next=yes;; -*O?*) strip_trailopt 'O';; -*l) strip_trailopt 'l'; skip_next=yes;; -*l?*) strip_trailopt 'l';; -[dEDm]) skip_next=yes;; -[JT]) skip_next=yes;; esac; case $flg in *$target_option*) has_opt=yes; break;; esac; done; test $has_opt = yes); then \
failcom='fail=yes'; \
else \
failcom='exit 1'; \
fi; \
dot_seen=no; \
target=echo all-recursive | sed s/-recursive//; \
case "all-recursive" in \
distclean-* | maintainer-clean-*) list='m4 compat mpi cipher random src doc tests' ;; \ *) list='compat mpi cipher random src doc tests' ;; \
esac; \
for subdir in $list; do \
echo "Making $target in $subdir"; \
if test "$subdir" = "."; then \
dot_seen=yes; \
local_target="$target-am"; \
else \
local_target="$target"; \
fi; \
(CDPATH="${ZSH_VERSION+.}:" && cd $subdir && make $local_target) \
|| eval $failcom; \done; \
if test "$dot_seen" = "no"; then \
make "$target-am" || exit 1; \
fi; test -z "$fail"
make: Fatal error: Command failed for target `all-recursive'
Current working directory /src/libgcrypt-1.8.0
- Error code 1
make: Fatal error: Command failed for target `all'